// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBottomNav.js should be hidden with a false value 1`] = `

<div class="bottom-nav primary">
  <button type="button"
          class="btn"
          data-ripple="true"
  >
    <div class="btn__content">
    </div>
  </button>
  <button type="button"
          class="btn"
          data-ripple="true"
  >
    <div class="btn__content">
    </div>
  </button>
</div>

`;

exports[`VBottomNav.js should be visible with a true value 1`] = `

<div class="bottom-nav bottom-nav--active primary">
  <button type="button"
          class="btn"
          data-ripple="true"
  >
    <div class="btn__content">
    </div>
  </button>
  <button type="button"
          class="btn"
          data-ripple="true"
  >
    <div class="btn__content">
    </div>
  </button>
</div>

`;

exports[`VBottomNav.js should have a bottom-nav class 1`] = `

<div class="bottom-nav primary">
  <button type="button"
          class="btn"
          data-ripple="true"
  >
    <div class="btn__content">
    </div>
  </button>
  <button type="button"
          class="btn"
          data-ripple="true"
  >
    <div class="btn__content">
    </div>
  </button>
</div>

`;

exports[`VBottomNav.js should have prop classes 1`] = `

<div class="bottom-nav bottom-nav--absolute bottom-nav--shift primary">
  <button type="button"
          class="btn"
          data-ripple="true"
  >
    <div class="btn__content">
    </div>
  </button>
  <button type="button"
          class="btn"
          data-ripple="true"
  >
    <div class="btn__content">
    </div>
  </button>
</div>

`;
